Update background photo

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -256,7 +256,7 @@ h5 {
 }
 
 body {
-  background-image: url('manning1.JPG');
+  background-image: url('manning1.jpg');
   background-repeat: no-repeat;
   background-position: center top;
   background-attachment: fixed;
