--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -41,7 +41,7 @@ h4 {
   flex-wrap: wrap;
   border: 0;
   border-radius: 0.75rem;
-  background-color: hsla(0, 0%, 100%, 0.9);
+  background-color: rgba(255, 255, 255, 0.9);
   padding: 1rem 1rem;
   width: 100%;
   overflow: scroll;
@@ -245,8 +245,15 @@ td {
 
 @media print {
   body {
+    background: rgb(255, 255, 255);
+    border: 1px dashed rgb(0, 0, 0, 0.5);
     background-attachment: scroll;
   }
+
+  .card {
+    background-color: rgba(255, 255, 255);
+  }
+
   .top,
   .operate {
     display: none;
